test/chainsaw/authpolicy/auto_login_private_jwk/secret-with-private-jwk.yaml
apiVersion: v1
kind: Secret
type: Opaque
metadata:
  name: secret
data:
  CLIENT_ID: ZW50cmFpZF9zZXJ2ZXI=
  CLIENT_SECRET: ZHVtbXlfc2VjcmV0
  PRIVATE_JWK: eyJ1c2UiOiJzaWciLCJrdHkiOiJSU0EiLCJraWQiOiIxY2Y2YjhjZS04OTJlLTQyMzMtOGI4ZC00YWQ2MTBhODNkNmYiLCJhbGciOiJSUzI1NiIsIm4iOiJ2Mk9ScmhyVk9HZ2JhekZkMGY4emo3N0pVc1RvRWhrV1NhMXVieWw1N1pWeWRtRHphdEJfRmQ1YjIxei1WbFBGNjNOSlV6WmdSeXpiT1NsNmNzNGxDRlpVUXlkNXRFSF83SWNWbHhlSkYzWmN6SFhxcXYtOHFDeU8yVGsxWko1ZXRweXl6YTRNVGtiam8wUGVGMUFzOUlqMUpuYXlQR0Y5WFhGX0pfYzV3VlhrV1ZzTGdXak9XTkpJM01CcjBkNHM3dFdOQ3dmVjBWVjdtZGwwWGhqQkpwSERxQTMzaEFJSUVURml5Z1dkY05VXy1rTk90Zy1oZGdBQ3dBeTg2NHZmYUJick1XTERSWWU2ejBTLVUya [...]
