test/chainsaw/authpolicy/auto_login_private_jwk/authpolicy-external-idp-error.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: token-proxy-fvsqhk
spec:
  podSelector:
    matchLabels:
      app: token-proxy-fvsqhk
  policyTypes:
  - Ingress
  - Egress
