test/chainsaw/authpolicy/auto_login_private_jwk/authpolicy-internal-idp-assert.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: token-proxy-fvsqhk
---
apiVersion: v1
kind: Service
metadata:
  name: token-proxy-fvsqhk
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: istio-metrics
    port: 15020
    protocol: TCP
    targetPort: 15020
  - appProtocol: http
    name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: token-proxy-fvsqhk
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: token-proxy-fvsqhk
spec:
  containers:
  - env:
    - name: GIN_MODE
      value: release
    - name: ZTOPERATOR_TOKEN_PROXY_ISSUER
      value: http://mock-oauth2.auth:8080/entraid
    - name: ZTOPERATOR_TOKEN_PROXY_TOKEN_ENDPOINT
      value: http://mock-oauth2.auth:8080/entraid/token
    - name: ZTOPERATOR_TOKEN_PROXY_PRIVATE_JWK
      valueFrom:
        secretKeyRef:
          key: PRIVATE_JWK
          name: secret
          optional: false
    imagePullPolicy: Always
    name: token-proxy-fvsqhk
    ports:
    - containerPort: 8080
      name: main
      protocol: TCP
    - containerPort: 15020
      name: istio-metrics
      protocol: TCP
    resources: {}
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
        - NET_BIND_SERVICE
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 150
      runAsNonRoot: true
      runAsUser: 150
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
  - name: github-auth
  nodeName: ztoperator-control-plane
  preemptionPolicy: PreemptLowerPriority
  priority: 20000
  priorityClassName: skip-medium
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 150
    seccompProfile:
      type: RuntimeDefault
    supplementalGroups:
    - 150
  serviceAccount: token-proxy-fvsqhk
  serviceAccountName: token-proxy-fvsqhk
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  topologySpreadConstraints:
  - labelSelector:
      matchExpressions:
      - key: app
        operator: In
        values:
        - token-proxy-fvsqhk
    matchLabelKeys:
    - pod-template-hash
    maxSkew: 1
    topologyKey: kubernetes.io/hostname
    whenUnsatisfiable: ScheduleAnyway
  - labelSelector:
      matchExpressions:
      - key: app
        operator: In
        values:
        - token-proxy-fvsqhk
    matchLabelKeys:
    - pod-template-hash
    maxSkew: 1
    topologyKey: onprem.gke.io/failure-domain-name
    whenUnsatisfiable: ScheduleAnyway
status:
  containerStatuses:
  - lastState: {}
    name: token-proxy-fvsqhk
    ready: true
    restartCount: 0
    started: true
  phase: Running
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-policy-egress-token-proxy
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    - port: 15020
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: chainsaw-private-jwk
      podSelector:
        matchLabels:
          app: token-proxy-fvsqhk
  podSelector:
    matchLabels:
      app: application
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: token-proxy-fvsqhk
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: auth
      podSelector:
        matchLabels:
          app: mock-oauth2
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: chainsaw-private-jwk
      podSelector:
        matchLabels:
          app: application
    ports:
    - port: 8080
      protocol: TCP
    - port: 15020
      protocol: TCP
  podSelector:
    matchLabels:
      app: token-proxy-fvsqhk
  policyTypes:
  - Ingress
  - Egress
