test/chainsaw/authpolicy/auto_login_private_jwk/authpolicy-internal-idp-error.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: auth-policy-envoy-secret
